--- a/Labfiles/01-analyze-text/Python/text-analysis/.env
+++ b/Labfiles/01-analyze-text/Python/text-analysis/.env
@@ -1,2 +1,2 @@
-AI_SERVICE_ENDPOINT=your_cognitive_services_endpoint
-AI_SERVICE_KEY=your_cognitive_services_key
+AI_SERVICE_ENDPOINT=https://yrenhke.cognitiveservices.azure.com/
+AI_SERVICE_KEY=d19adc8a1dcb45b4a914d54ecdac5861
