--- a/Labfiles/03-language/Python/clock-client/.env
+++ b/Labfiles/03-language/Python/clock-client/.env
@@ -1,2 +1,2 @@
-LS_CONVERSATIONS_ENDPOINT=your_language_service_endpoint
-LS_CONVERSATIONS_KEY=your_language_service_primary_key
+LS_CONVERSATIONS_ENDPOINT=https://yrenhkeqwcht.cognitiveservices.azure.com/
+LS_CONVERSATIONS_KEY=7018634ad0824f169b5f8b1293e43b6e
